Реализованы REST API для пользователей и фильмов, добавлена обработка ошибок, внедрение зависимостей, переработана архитектура хранения.